--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/bin
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.TestExport/obj
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.TestExport/bin
+
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/*.user
