--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -107,6 +107,21 @@
     <Compile Include="Helpers\CollectionHelper.ToArray.cs">
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\ScriptHelper.SetAction.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\ScriptHelper.SetPredicate.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\ScriptHelper.SetSimpleAction.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\ScriptHelper.SetSimpleFunc.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\ScriptHelper.SetSimplePredicate.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="Helpers\MethodHelper.Constructor.cs">
       <DependentUpon>MethodHelper.cs</DependentUpon>
     </Compile>
@@ -116,6 +131,10 @@
     <Compile Include="Helpers\MethodHelper.cs" />
     <Compile Include="Helpers\MethodHelper.TryGetDelegateTypeFromMethod.cs">
       <DependentUpon>MethodHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\ScriptHelper.cs" />
+    <Compile Include="Helpers\ScriptHelper.SetSimplePredicateWrapper.cs">
+      <DependentUpon>ScriptHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\StringHelper.AsString.cs">
       <DependentUpon>StringHelper.cs</DependentUpon>
@@ -128,11 +147,14 @@
     <Compile Include="ITMDisposable.cs" />
     <Compile Include="ITMObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripting\CommonScriptFunctionSetup.cs" />
     <Compile Include="Scripting\Export\ExportScriptFuncAttribute.cs" />
     <Compile Include="Scripting\Export\ExportScriptTypeAttribute.cs" />
     <Compile Include="Scripting\IScriptExecutionContext.cs" />
     <Compile Include="Scripting\IScriptExecutor.cs" />
-    <Compile Include="Scripting\ScriptExecutorBase.Collections.cs" />
+    <Compile Include="Scripting\ScriptExecutorBase.Collections.cs">
+      <DependentUpon>ScriptExecutorBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="Scripting\ScriptExecutorBase.cs" />
     <Compile Include="Scripting\ScriptExecutorBase.Interface.cs">
       <DependentUpon>ScriptExecutorBase.cs</DependentUpon>
