add .NET 4.5.1 project and other minor changes

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.TestExport/bin
 
 /Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine/*.user
+
+/MarcelJoachimKloubert.CLRToolbox.451/bin
+/MarcelJoachimKloubert.CLRToolbox.451/obj
