--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="IIdentifiable.cs" />
     <Compile Include="ITMDisposable.cs" />
+    <Compile Include="ITMEquatable.cs" />
     <Compile Include="ITMObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripting\CommonScriptFunctionSetup.cs" />
