--- a/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.40/MarcelJoachimKloubert.CLRToolbox.40.csproj
@@ -201,6 +201,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMDisposable.cs">
       <Link>ITMDisposable.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMEquatable.cs">
+      <Link>ITMEquatable.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\ITMObject.cs">
       <Link>ITMObject.cs</Link>
     </Compile>
