--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -59,6 +59,9 @@
     <Compile Include="ComponentModel\NotificationObjectBase.PropertyChanging.cs">
       <DependentUpon>NotificationObjectBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\ConfigRepositoryBase.cs" />
+    <Compile Include="Configuration\IConfigRepository.cs" />
+    <Compile Include="Configuration\Impl\KeyValuePairConfigRepository.cs" />
     <Compile Include="Diagnostics\Execution\Impl\DelegateLogCommand.cs" />
     <Compile Include="Diagnostics\Execution\ILogCommand.cs" />
     <Compile Include="Diagnostics\Execution\ILogCommandExecutionContext.cs" />
