scripting framework, WPF, console and fixes
- ADD: started to implement script editor
- ADD: EndTime to IScriptExecutionContext
- ADD: WPF projects
- CHG: Console => TMConsole in CommonScriptFunctionSetup<TExecutor>
- ADD: ReadLine(), Clear() and ToFormatArrayFunc to TMConsole
- FIX: documentation

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,15 @@
 
 /MarcelJoachimKloubert.CLRToolbox.451/bin
 /MarcelJoachimKloubert.CLRToolbox.451/obj
+/MarcelJoachimKloubert.CLRToolbox.30.WPF/obj
+/MarcelJoachimKloubert.CLRToolbox.30.WPF/bin
+/MarcelJoachimKloubert.CLRToolbox.35.WPF/obj
+/MarcelJoachimKloubert.CLRToolbox.35.WPF/bin
+/MarcelJoachimKloubert.CLRToolbox.40.WPF/obj
+/MarcelJoachimKloubert.CLRToolbox.40.WPF/bin
+/MarcelJoachimKloubert.CLRToolbox.45.WPF/obj
+/MarcelJoachimKloubert.CLRToolbox.45.WPF/bin
+/MarcelJoachimKloubert.CLRToolbox.451.WPF/obj
+/MarcelJoachimKloubert.CLRToolbox.451.WPF/bin
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.Editor/obj
+/Projects/MarcelJoachimKloubert.ScriptEngine/MarcelJoachimKloubert.ScriptEngine.Editor/bin
