fixes, conversion, improvements extension methods and service locator
- ADD: GetMemberName extension method
- ADD: service locator framework with first implementation (MEF)
- FIX: .NET 2.0 library for C# 2 compiler
- ADD: TMConvert class that is similar to System.Convert
- ADD: strong typed IValueConverter base classes for WPF irary
extensions
- CHG: code improvements

--- a/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.20/MarcelJoachimKloubert.CLRToolbox.20.csproj
@@ -169,8 +169,16 @@
     <Compile Include="Scripting\ScriptExecutorBase.ScriptExecutionContext.cs">
       <DependentUpon>ScriptExecutorBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="ServiceLocation\IServiceLocator.cs" />
+    <Compile Include="ServiceLocation\ServiceActivationException.cs" />
+    <Compile Include="ServiceLocation\ServiceLocator.cs" />
+    <Compile Include="ServiceLocation\ServiceLocatorBase.cs" />
+    <Compile Include="ServiceLocation\ServiceLocatorBase.Interface.cs">
+      <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="TMApplication.cs" />
     <Compile Include="TMConsole.cs" />
+    <Compile Include="TMConvert.cs" />
     <Compile Include="TMDisposableBase.cs" />
     <Compile Include="TMObject.cs" />
   </ItemGroup>
