--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -49,6 +49,13 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\ValueConverterBase.cs">
+      <Link>Data\ValueConverterBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\ValueConverterBase.Interface.cs">
+      <Link>Data\ValueConverterBase.Interface.cs</Link>
+      <DependentUpon>ValueConverterBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Input\SimpleCommand.cs">
       <Link>Input\SimpleCommand.cs</Link>
     </Compile>
