--- a/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45.WPF/MarcelJoachimKloubert.CLRToolbox.45.WPF.csproj
@@ -52,6 +52,12 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.30.wpf\data\ValueConverterBase.cs">
+      <Link>Data\ValueConverterBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.30.wpf\data\ValueConverterBase.Interface.cs">
+      <Link>Data\ValueConverterBase.Interface.cs</Link>
+    </Compile>
     <Compile Include="..\marceljoachimkloubert.clrtoolbox.30.wpf\input\SimpleCommand.cs">
       <Link>Input\SimpleCommand.cs</Link>
     </Compile>
