--- a/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.451/MarcelJoachimKloubert.CLRToolbox.451.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="Microsoft.CSharp" />
@@ -246,11 +247,30 @@
       <Link>Scripting\ScriptExecutorBase.ScriptExecutionContext.cs</Link>
       <DependentUpon>ScriptExecutorBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\servicelocation\IServiceLocator.cs">
+      <Link>ServiceLocation\IServiceLocator.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\servicelocation\ServiceActivationException.cs">
+      <Link>ServiceLocation\ServiceActivationException.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\servicelocation\ServiceLocator.cs">
+      <Link>ServiceLocation\ServiceLocator.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\servicelocation\ServiceLocatorBase.cs">
+      <Link>ServiceLocation\ServiceLocatorBase.cs</Link>
+    </Compile>
+    <Compile Include="..\marceljoachimkloubert.clrtoolbox.20\servicelocation\ServiceLocatorBase.Interface.cs">
+      <Link>ServiceLocation\ServiceLocatorBase.Interface.cs</Link>
+      <DependentUpon>ServiceLocatorBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMApplication.cs">
       <Link>TMApplication.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMConsole.cs">
       <Link>TMConsole.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMConvert.cs">
+      <Link>TMConvert.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\TMDisposableBase.cs">
       <Link>TMDisposableBase.cs</Link>
@@ -283,6 +303,13 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.Shuffle.cs">
       <Link>Extensions\Collections.Shuffle.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\LinqExpressions.cs">
+      <Link>Extensions\LinqExpressions.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\LinqExpressions.GetMemberName.cs">
+      <Link>Extensions\LinqExpressions.GetMemberName.cs</Link>
+      <DependentUpon>LinqExpressions.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Scripting.cs">
       <Link>Extensions\Scripting.cs</Link>
@@ -364,6 +391,9 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Scripting\ScriptExecutorBase.Collections.cs">
       <Link>Scripting\ScriptExecutorBase.Collections.cs</Link>
       <DependentUpon>ScriptExecutorBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\ServiceLocation\Impl\MefServiceLocator.cs">
+      <Link>ServiceLocation\Impl\MefServiceLocator.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.45\ComponentModel\NotificationObjectBase.PropertyChange45.cs">
       <Link>ComponentModel\NotificationObjectBase.PropertyChange45.cs</Link>
