--- a/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.35.WPF/MarcelJoachimKloubert.CLRToolbox.35.WPF.csproj
@@ -49,6 +49,15 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\CommandValueConverterBase.cs">
+      <Link>Data\CommandValueConverterBase.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\Impl\CommandValueConverter.cs">
+      <Link>Data\Impl\CommandValueConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\Impl\DelegateToCommandValueConverter.cs">
+      <Link>Data\Impl\DelegateToCommandValueConverter.cs</Link>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.30.WPF\Data\ValueConverterBase.cs">
       <Link>Data\ValueConverterBase.cs</Link>
     </Compile>
